@@ -93,7 +93,7 @@ namespace System.Web.Configuration {
 		[ConfigurationProperty ("decryptionKey", DefaultValue = "AutoGenerate,IsolateApps")]
 		public string DecryptionKey {
 			get { return (string) base [decryptionKeyProp];}
-			set { base[decryptionKeyProp] = value; }
+			set { base[decryptionKeyProp] = value;  SetDecryptionKey (value); }
 		}
 
 		[TypeConverter (typeof (MachineKeyValidationConverter))]
@@ -108,7 +108,7 @@ namespace System.Web.Configuration {
 		[ConfigurationProperty ("validationKey", DefaultValue = "AutoGenerate,IsolateApps")]
 		public string ValidationKey {
 			get { return (string) base [validationKeyProp];}
-			set { base[validationKeyProp] = value; }
+			set { base[validationKeyProp] = value;  SetValidationKey (value); }
 		}
 
 		protected override ConfigurationPropertyCollection Properties {
@@ -118,6 +118,9 @@ namespace System.Web.Configuration {
 #region CompatabilityCode
 		static byte [] autogenerated;
 		static byte [] autogenerated_decrypt;
+		byte[] decryption_key;
+		byte[] decryption_key_192bits;
+		byte[] validation_key;
 
 		static void AutoGenKeys ()
 		{
@@ -171,9 +174,32 @@ namespace System.Web.Configuration {
 
 			return GetBytes (key, len);
 		}
+
+		internal void SetDecryptionKey (string n)
+		{
+			decryption_key = MakeKey (n, true); //, out isolate_decryption);
+			decryption_key_192bits = new byte [24];
+			int count = 24;
+			if (decryption_key.Length < 24)
+				count = decryption_key.Length;
+			Buffer.BlockCopy (decryption_key, 0, decryption_key_192bits, 0, count);
+		}
+
+		internal void SetValidationKey (string n)
+		{
+			validation_key = MakeKey (n, false); //, out isolate_validation);
+		}
 		
 		internal byte [] ValidationKeyBytes {
-			get { return MakeKey (ValidationKey, false); }
+			get { return validation_key; }
+		}
+
+		internal byte [] DecryptionKeyBytes {
+			get { return decryption_key; }
+		}
+
+		internal byte [] DecryptionKey192Bits {
+			get { return decryption_key_192bits; }
 		}
 #endregion
 
